[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["venkatesh-1416 <venkatesh.vuppala@500apps.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
fake-useragent = "^1.1.3"
pyppeteer = "^1.0.2"
openai = "^0.27.4"
pylint = "^2.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
